--- a/src/blocks/cart-items/__list/cart-items__list.css
+++ b/src/blocks/cart-items/__list/cart-items__list.css
@@ -18,6 +18,6 @@
     margin-bottom: 50px;
   }
   .cart-items__list:last-of-type {
-    margin-bottom: 8px;
+    margin-bottom: 12px;
   }
 }
